; ModuleID = '/home/carl/AnghaBench/tig/src/extr_display.c_update_status_window.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_display.c_update_status_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { i64 }

@input_mode = common dso_local global i64 0, align 8
@status_empty = common dso_local global i32 0, align 4
@status_win = common dso_local global i32 0, align 4
@use_scroll_status_wclear = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.view*, i8*, i8*, i32)* @update_status_window to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_status_window(%struct.view* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.view*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.view* %0, %struct.view** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %15 = load i64, i64* @input_mode, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %96

18:                                               ; preds = %4
  %19 = load i32, i32* @status_empty, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %18
  %22 = load i8*, i8** %8, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %95

26:                                               ; preds = %21, %18
  %27 = load i32, i32* @status_win, align 4
  %28 = call i32 @wmove(i32 %27, i32 0, i32 0)
  %29 = load %struct.view*, %struct.view** %6, align 8
  %30 = icmp ne %struct.view* %29, null
  br i1 %30, label %31, label %42

31:                                               ; preds = %26
  %32 = load %struct.view*, %struct.view** %6, align 8
  %33 = getelementptr inbounds %struct.view, %struct.view* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %42

36:                                               ; preds = %31
  %37 = load i64, i64* @use_scroll_status_wclear, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %36
  %40 = load i32, i32* @status_win, align 4
  %41 = call i32 @wclear(i32 %40)
  br label %42

42:                                               ; preds = %39, %36, %31, %26
  %43 = load i8*, i8** %8, align 8
  %44 = load i8, i8* %43, align 1
  %45 = icmp ne i8 %44, 0
  br i1 %45, label %46, label %51

46:                                               ; preds = %42
  %47 = load i32, i32* @status_win, align 4
  %48 = load i8*, i8** %8, align 8
  %49 = load i32, i32* %9, align 4
  %50 = call i32 @vwprintw(i32 %47, i8* %48, i32 %49)
  store i32 0, i32* @status_empty, align 4
  br label %52

51:                                               ; preds = %42
  store i32 1, i32* @status_empty, align 4
  br label %52

52:                                               ; preds = %51, %46
  %53 = load i32, i32* @status_win, align 4
  %54 = call i32 @wclrtoeol(i32 %53)
  %55 = load i8*, i8** %7, align 8
  %56 = icmp ne i8* %55, null
  br i1 %56, label %57, label %94

57:                                               ; preds = %52
  %58 = load i8*, i8** %7, align 8
  %59 = load i8, i8* %58, align 1
  %60 = sext i8 %59 to i32
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %94

62:                                               ; preds = %57
  %63 = load i8*, i8** %7, align 8
  %64 = call i64 @strlen(i8* %63)
  store i64 %64, i64* %10, align 8
  %65 = load i32, i32* @status_win, align 4
  %66 = load i32, i32* %12, align 4
  %67 = load i32, i32* %11, align 4
  %68 = call i32 @getyx(i32 %65, i32 %66, i32 %67)
  %69 = load i32, i32* @status_win, align 4
  %70 = load i32, i32* %14, align 4
  %71 = load i32, i32* %13, align 4
  %72 = call i32 @getmaxyx(i32 %69, i32 %70, i32 %71)
  %73 = load i32, i32* %14, align 4
  %74 = load i64, i64* %10, align 8
  %75 = load i32, i32* %13, align 4
  %76 = load i32, i32* %11, align 4
  %77 = sub nsw i32 %75, %76
  %78 = sext i32 %77 to i64
  %79 = icmp ult i64 %74, %78
  br i1 %79, label %80, label %93

80:                                               ; preds = %62
  %81 = load i32, i32* @status_win, align 4
  %82 = load i32, i32* %13, align 4
  %83 = sext i32 %82 to i64
  %84 = load i64, i64* %10, align 8
  %85 = sub i64 %83, %84
  %86 = trunc i64 %85 to i32
  %87 = load i8*, i8** %7, align 8
  %88 = call i32 @mvwprintw(i32 %81, i32 0, i32 %86, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %87)
  %89 = load i32, i32* @status_win, align 4
  %90 = load i32, i32* %12, align 4
  %91 = load i32, i32* %11, align 4
  %92 = call i32 @wmove(i32 %89, i32 %90, i32 %91)
  br label %93

93:                                               ; preds = %80, %62
  br label %94

94:                                               ; preds = %93, %57, %52
  store i32 1, i32* %5, align 4
  br label %96

95:                                               ; preds = %21
  store i32 0, i32* %5, align 4
  br label %96

96:                                               ; preds = %95, %94, %17
  %97 = load i32, i32* %5, align 4
  ret i32 %97
}

declare dso_local i32 @wmove(i32, i32, i32) #1

declare dso_local i32 @wclear(i32) #1

declare dso_local i32 @vwprintw(i32, i8*, i32) #1

declare dso_local i32 @wclrtoeol(i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @getyx(i32, i32, i32) #1

declare dso_local i32 @getmaxyx(i32, i32, i32) #1

declare dso_local i32 @mvwprintw(i32, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
